assets/css/style.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,600;0,700;0,800;0,900;1,500;1,600;1,700;1,900&display=swap");

/* variáveis bordervendasRecentespara transição de modo - dark/light :D */
:root {
  --purplePadrão: #9e77f1;
  --purplePadrão2: #9e77f1;
  --purpleDark: #915ddf;
  --white: #fff;
  --whiteDiferente: #fdfdfd;
  --dark: #313131;
  --darkClaro: #3f3f3f;
}

/* troca de temas :D */
[data-theme="dark"] {
  --white: #313131;
  --whiteDiferente: #3f3f3f;
  --dark: #fff;
  --purplePadrão: #915ddf;
  --purplePadrão2: #6a43bd;
  transition: 5s;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Poppins", sans-serif;
}

html {
  overflow: hidden;
}

html,
body {
  height: 100%;
}


body {
  background: var(--white);
  overflow: scroll;
  min-height: 100vh;
}

/* login */

body.loginStyle form {
  color: var(--white);
  overflow-y: auto;
}

body.loginStyle .margin-login {
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.main {
  width: 350px;
  height: 500px;
  overflow: hidden;
  /* background: linear-gradient(#9E77F1, #582db6);; */
  border-radius: 30px;
  box-shadow: 5px 20px 20px #424242;
  /* border: 1px #9E77F1; */
  border: 2px solid #9e77f1;
}

#chk {
  display: none;
}

a,
h1 {
  color: #9e77f1;
  font-family: "Poppins", sans-serif;
}

body.loginStyle label {
  color: var(--purplePadrão) !important;
  font-size: 2.6rem;
  justify-content: center;
  display: flex;
  margin: 60px;
  font-weight: bold;
  cursor: pointer;
  transition: 0.5s ease-in-out;
  align-items: center;
}

body.loginStyle input {
  width: 50%;
  height: 20px;
  background: #f5f5f5;
  justify-content: center;
  display: flex;
  margin: 20px auto;
  padding: 10px;
  outline: none;
  border-radius: 30px;
  border: 2px solid #9e77f1;
}

::-webkit-scrollbar {
  background-color: transparent;
  width: 5px;
  height: 5px;
  border-radius: 30px;
}

::-webkit-scrollbar-thumb {
  background-color: transparent;
  height: 5px;
  border-radius: 30px;
}

.login button {
  width: 60%;
  height: 40px;
  margin: 10px auto;
  justify-content: center;
  display: block;
  color: #f5f5f5;
  background: #582db6;
  font-size: 1em;
  font-weight: bold;
  margin-top: 20px;
  outline: none;
  border: none;
  transform: scale(1.1);
  border-radius: 5px;
  transition: 0.3s ease-in;
  cursor: pointer;
  box-shadow: 5px 10px 10px #424242;
}

.login button:hover {
  background: #69bf5b;
  transition: 0.3s ease-out;
  cursor: pointer;
  transform: translateY(2px);
  transform: scale(0.96);
  box-shadow: 2px 5px 5px #424242;
}

.login {
  border-radius: 60% / 10%;
}

.login p {
  font-size: 0.94em;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  margin: 36px 14px -11px 5px;
  color: #9e77f1 !important;
}

.login label {
  color: #582db6;
  transform: scale(0.6);
}

#chk:checked~.login {
  transform: translateY(-500px);
}

#chk:checked~.login label {
  transform: scale(1);
}

#chk:checked~.login label {
  transform: scale(1);
}

/* login */

.footer-father-f-f {
  height: 100%;
  display: flex;
  flex-direction: column;
}

.footer-father-f {
  flex: 1 1 auto;
}

.footer-father {
  height: 100%;
  margin: auto;
}

.footer-father .container-fluid {
  height: 100%;
  width: 100%;
}

.containerDarkModeBtn {
  margin-top: -6px !important;
}


.corValidade {
  background-color: red;
}

/* NAVBAR */

#divDarkModeBtn {
  width: 20%;
  margin-right: 5%;
  margin-left: 20%;

}

#divDarkModeBtn button {
  background-color: var(--purplePadrão);
  cursor: pointer;
  transition-duration: 0.7s;
  padding: 0.4rem;
  border: none;
  border-radius: 50%;
  width: 70px;
  height: 70px;
}

/* effct btn light :o*/
#divDarkModeBtn button #lightModeActive {
  color: #ffffff;
  transition-duration: 0.6s;
}

#divDarkModeBtn button #lightModeActive:hover {
  color: #313131;
  transition-duration: 0.6s;
}

/* btn dark :o*/
#divDarkModeBtn button #darkModeActive {
  color: #313131;
  transition-duration: 0.6s;
}

#divDarkModeBtn button #darkModeActive:hover {
  color: #fff;
  transition-duration: 0.6s;
}

#nomeUserNav {
  color: #9e77f1;
  font-weight: 500;
}

.divNav {
  width: 100%;
  display: flex;
  justify-content: space-between;
  margin-bottom: 3%;
  align-items: center;
  margin-top: auto;
}

.divNavLogo {
  z-index: 9;
  display: flex;
  justify-content: left;
  list-style-type: none;
}

.menu-f {
  width: 100%;
  height: 100%;
  padding: 11px;
  display: flex;
  align-items: center;
  padding-top: 0;
}

.menu-f ul {
  list-style-type: none;
  padding: 3%;
}

.navbar {
  margin-top: 20px;
  position: relative;
  height: 75px;
  width: 100%;
  background: var(--whiteDiferente);
  border-radius: 50px;
  display: flex;
  align-items: center;
  justify-content: center;
  /* overflow: hidden; */
  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
}

.navbar ul {
  position: relative;
  display: flex;
}

.navbar ul li {
  position: relative;
  list-style-type: none;
}

.navbar ul li a:hover {
  color: #69bf5b;
}

.navbar ul li.dropdown ul {
  background-color: var(--purplePadrão);
  position: absolute;
  right: 1;
  min-width: 75px;
  z-index: 5;
  display: none;
  border-radius: 25px;
  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
}

.navbar ul li.dropdown:hover ul {
  display: block;
}

.navbar ul li.dropdown ul li a {
  color: #ffffff !important;
  width: 75px;
  height: 45px;
}

.navbar ul li.dropdown ul li a:hover {
  color: #69bf5b !important;
}

.navbar ul li a {
  position: relative;
  height: 66px;
  width: 67px;
  display: flex;
  align-items: center;
  justify-content: center;
  text-decoration: none;
}

.navbar ul li a i {
  position: absolute;
  font-size: 1.2em;
  color: #9e77f1;
}

ul li a i.activeIcon {
  opacity: 0;
  pointer-events: none;
  transition: all 0.6s ease;
}

.navbar ul li.active a i {
  opacity: 1;
  pointer-events: auto;
}
/* ... */

